--- a/style.css
+++ b/style.css
@@ -5,6 +5,14 @@ body {
     text-align: center;
 }
 
+.body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+    padding: 0;
+}
 
 h1 {
     margin: 0;
@@ -13,7 +21,7 @@ h1 {
 nav {
     background-color: #1f2937;
     color: white;
-    padding: 0 16px;
+    padding: 0 64px;
 }
 
 a {
@@ -35,9 +43,17 @@ a {
     background-color: #1f2937;
     color: white;
     display: flex;
+    justify-content: space-evenly;
     padding: 64px;
     text-align: left;
     align-items: center;
+    width: 100%;
+}
+
+.header-text {
+    display: flex;
+    flex-flow: column wrap;
+    width: 75%;
 }
 
 .large-image {
@@ -48,6 +64,7 @@ a {
     display: flex;
     justify-content: center;
     align-items: center;
+    align-self: flex-start;
 }
 
 button {
@@ -77,6 +94,7 @@ button {
     font-size: 36px;
     font-weight: bolder;
     color: #1f2937;
+    margin-bottom: 8px;
 }
 
 .card-container {
@@ -88,7 +106,7 @@ button {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 32px;
+    margin: 16px 32px;
 }
 
 .quote-section {
@@ -110,15 +128,28 @@ button {
 }
 
 .CTA-section {
-    text-align: center;
+    text-align: left;
     background-color: #3882F6;
     color: white;
+    border-radius: 16px;
+    width: 60%;
     display: flex;
-    flex: 1;
+    justify-content: center;
+    align-items: center;
+    gap: 32px;
+    margin: 32px;
 }
 
 .CTA-button {
     border-style: solid;
     border-color: white;
     padding: 8px 16px;
+}
+
+footer {
+    background: #1f2937;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
